--- a/Nabi_Training_JavaFullStack_Devlopment_Program/pom.xml
+++ b/Nabi_Training_JavaFullStack_Devlopment_Program/pom.xml
@@ -20,6 +20,18 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version> <!-- use the appropriate version here -->
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
