--- a/Nabi_Training_JavaFullStack_Devlopment_Program/pom.xml
+++ b/Nabi_Training_JavaFullStack_Devlopment_Program/pom.xml
@@ -32,6 +32,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.0</version>
+        </dependency>
 
     </dependencies>
 
